# goit-pythonweb-hw-012

./: README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/utils/: hash_utility.py
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_repository_contacts.py  test_repository_users.py
